Added Comment in youtube template.

--- a/yt.html
+++ b/yt.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-  <table width="100%" >
+    <!-- We can add this attributes for show better tables and border. =>> border="black" width="100%" bgcolor="grey" -->
+  <table  width="100%" > 
     <tr align="center" height="50px">
       <td colspan="2"><img height="50px" src="./images/yt-logo.png"></td>
       <td><input type="text" placeholder="Search videos on Youtube"><button>Search</button></input></td>
