--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -16,100 +17,165 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="mynavbar">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#"><i class="bi bi-geo-alt"></i>Delievering to Indore 452003 <br>Update Location</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Category</a>
-            <ul class="dropdown-menu">              
-              <li><a class="dropdown-item" href="#">Alexa Skills</a></li>
-              <li><a class="dropdown-item" href="#">Amazon Devices</a></li>
-              <li><a class="dropdown-item" href="#">Amazon Fashion</a></li>
-              <li><a class="dropdown-item" href="#">Amazon Pharmacy</a></li>
-              <li><a class="dropdown-item" href="#">Appliances</a></li>
-              <li><a class="dropdown-item" href="#">Apps &amp; Games</a></li>
-              <li><a class="dropdown-item" href="#">Audible Audiobooks</a></li>
-              <li><a class="dropdown-item" href="#">Baby</a></li>
-              <li><a class="dropdown-item" href="#">Beauty</a></li>
-              <li><a class="dropdown-item" href="#">Books</a></li>
-              <li><a class="dropdown-item" href="#">Car &amp; Motorbike</a></li>
-              <li><a class="dropdown-item" href="#">Clothing &amp; Accessories</a></li>
-              <li><a class="dropdown-item" href="#">Collectibles</a></li>
-              <li><a class="dropdown-item" href="#">Computers &amp; Accessories</a></li>
-              <li><a class="dropdown-item" href="#">Deals</a></li>
-              <li><a class="dropdown-item" href="#">Electronics</a></li>
-              <li><a class="dropdown-item" href="#">Furniture</a></li>
-              <li><a class="dropdown-item" href="#">Garden &amp; Outdoors</a></li>
-              <li><a class="dropdown-item" href="#">Gift Cards</a></li>
-              <li><a class="dropdown-item" href="#">Grocery &amp; Gourmet Foods</a></li>
-              <li><a class="dropdown-item" href="#">Health &amp; Personal Care</a></li>
-              <li><a class="dropdown-item" href="#">Home &amp; Kitchen</a></li>
-              <li><a class="dropdown-item" href="#">Industrial &amp; Scientific</a></li>
-              <li><a class="dropdown-item" href="#">Jewellery</a></li>
-              <li><a class="dropdown-item" href="#">Kindle Store</a></li>
-              <li><a class="dropdown-item" href="#">Luggage &amp; Bags</a></li>
-              <li><a class="dropdown-item" href="#">Luxury Beauty</a></li>
-              <li><a class="dropdown-item" href="#">Movies &amp; TV Shows</a></li>
-              <li><a class="dropdown-item" href="#">MP3 Music</a></li>
-              <li><a class="dropdown-item" href="#">Music</a></li>
-              <li><a class="dropdown-item" href="#">Musical Instruments</a></li>
-              <li><a class="dropdown-item" href="#">Office Products</a></li>
-              <li><a class="dropdown-item" href="#">Pet Supplies</a></li>
-              <li><a class="dropdown-item" href="#">Prime Video</a></li>
-              <li><a class="dropdown-item" href="#">Shoes &amp; Handbags</a></li>
-              <li><a class="dropdown-item" href="#">Software</a></li>
-              <li><a class="dropdown-item" href="#">Sports, Fitness &amp; Outdoors</a></li>
-              <li><a class="dropdown-item" href="#">Subscribe &amp; Save</a></li>
-              <li><a class="dropdown-item" href="#">Tools &amp; Home Improvement</a></li>
-              <li><a class="dropdown-item" href="#">Toys &amp; Games</a></li>
-              <li><a class="dropdown-item" href="#">Under ₹500</a></li>
-              <li><a class="dropdown-item" href="#">Video Games</a></li>
-              <li><a class="dropdown-item" href="#">Watches</a></li>
-            </ul>
-          </li> 
-          <li class="nav-item ">
-            <form class="d-flex w-100">
-              <input class="form-control me-2" type="text" placeholder="Search">
-              <button class="btn btn-primary" type="button">Search</button>
-            </form>
-          </li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">IN 🇮🇳</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">IN 🇮🇳 </a></li>
-              <li><a class="dropdown-item" href="#">EN 🇺🇸</a></li>
-            </ul>
-          </li> 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Hello, sign in <br>Account & Lists
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Sign up</a></li>
-              <li><a class="dropdown-item" href="#">Login</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Returns & Orders</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"><img src="images/cart.svg" alt="">Cart</a>
-          </li>
-        </ul>
-        
+      <div class="collapse navbar-collapse d-flex justify-content-between" id="mynavbar">
+        <div>
+          <ul class="navbar-nav me-auto" style="margin-left: 20px;">
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="bi bi-geo-alt"></i>Delievering to Indore 452003 <br>Update Location</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="navbar-nav me-auto" style="margin-left: 20px;">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Category</a>
+              <ul class="dropdown-menu">              
+                <li><a class="dropdown-item" href="#">Alexa Skills</a></li>
+                <li><a class="dropdown-item" href="#">Amazon Devices</a></li>
+                <li><a class="dropdown-item" href="#">Amazon Fashion</a></li>
+                <li><a class="dropdown-item" href="#">Amazon Pharmacy</a></li>
+                <li><a class="dropdown-item" href="#">Appliances</a></li>
+                <li><a class="dropdown-item" href="#">Apps &amp; Games</a></li>
+                <li><a class="dropdown-item" href="#">Audible Audiobooks</a></li>
+                <li><a class="dropdown-item" href="#">Baby</a></li>
+                <li><a class="dropdown-item" href="#">Beauty</a></li>
+                <li><a class="dropdown-item" href="#">Books</a></li>
+                <li><a class="dropdown-item" href="#">Car &amp; Motorbike</a></li>
+                <li><a class="dropdown-item" href="#">Clothing &amp; Accessories</a></li>
+                <li><a class="dropdown-item" href="#">Collectibles</a></li>
+                <li><a class="dropdown-item" href="#">Computers &amp; Accessories</a></li>
+                <li><a class="dropdown-item" href="#">Deals</a></li>
+                <li><a class="dropdown-item" href="#">Electronics</a></li>
+                <li><a class="dropdown-item" href="#">Furniture</a></li>
+                <li><a class="dropdown-item" href="#">Garden &amp; Outdoors</a></li>
+                <li><a class="dropdown-item" href="#">Gift Cards</a></li>
+                <li><a class="dropdown-item" href="#">Grocery &amp; Gourmet Foods</a></li>
+                <li><a class="dropdown-item" href="#">Health &amp; Personal Care</a></li>
+                <li><a class="dropdown-item" href="#">Home &amp; Kitchen</a></li>
+                <li><a class="dropdown-item" href="#">Industrial &amp; Scientific</a></li>
+                <li><a class="dropdown-item" href="#">Jewellery</a></li>
+                <li><a class="dropdown-item" href="#">Kindle Store</a></li>
+                <li><a class="dropdown-item" href="#">Luggage &amp; Bags</a></li>
+                <li><a class="dropdown-item" href="#">Luxury Beauty</a></li>
+                <li><a class="dropdown-item" href="#">Movies &amp; TV Shows</a></li>
+                <li><a class="dropdown-item" href="#">MP3 Music</a></li>
+                <li><a class="dropdown-item" href="#">Music</a></li>
+                <li><a class="dropdown-item" href="#">Musical Instruments</a></li>
+                <li><a class="dropdown-item" href="#">Office Products</a></li>
+                <li><a class="dropdown-item" href="#">Pet Supplies</a></li>
+                <li><a class="dropdown-item" href="#">Prime Video</a></li>
+                <li><a class="dropdown-item" href="#">Shoes &amp; Handbags</a></li>
+                <li><a class="dropdown-item" href="#">Software</a></li>
+                <li><a class="dropdown-item" href="#">Sports, Fitness &amp; Outdoors</a></li>
+                <li><a class="dropdown-item" href="#">Subscribe &amp; Save</a></li>
+                <li><a class="dropdown-item" href="#">Tools &amp; Home Improvement</a></li>
+                <li><a class="dropdown-item" href="#">Toys &amp; Games</a></li>
+                <li><a class="dropdown-item" href="#">Under ₹500</a></li>
+                <li><a class="dropdown-item" href="#">Video Games</a></li>
+                <li><a class="dropdown-item" href="#">Watches</a></li>
+              </ul>
+            </li> 
+            <li class="nav-item ">
+              <form class="d-flex w-100">
+                <input class="form-control me-2" type="text" placeholder="Search" style="width: 700px;">
+                <button class="btn btn-primary" type="button">Search</button>
+              </form>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="navbar-nav" style="margin-left: 20px;">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">IN 🇮🇳</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">IN 🇮🇳 </a></li>
+                <li><a class="dropdown-item" href="#">EN 🇺🇸</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Hello, sign in <br>Account & Lists
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Sign up</a></li>
+            <li><a class="dropdown-item" href="#">Login</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Returns & <br> Orders</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#"><img src="images/cart.svg" alt="">Cart</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav> 
 
 <div class="container-fluid mt-3">
-  <h3>Basic Navbar Example</h3>
-  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-  <p>The navbar-expand-xxl|xl|lg|md|sm class determines when the navbar should stack vertically (on xxlarge, extra large, large, medium or small screens).</p>
+  <!-- Carousel -->
+  <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+    <!-- Indicators/dots -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
+    </div>
+
+    <!-- The slideshow/carousel -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img24/Beauty/SVD/Sept/Skincare-PC._CB564592935_.jpg" alt="Los Angeles" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="https://images-eu.ssl-images-amazon.com/images/G/31/OHL/24/BAU/feb/PC_hero_1_2x_1._CB582889946_.jpg" alt="Chicago" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="https://images-eu.ssl-images-amazon.com/images/G/31/INSLGW/pc_unrec_refresh._CB555261616_.jpg" alt="New York" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img21/MA2024/GW/August/Unrec/BAU/21Aug/2-1._CB565867124_.jpg" alt="New York" class="d-block w-100">
+      </div>    
+      <div class="carousel-item">
+        <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Toys/GW/GW-Hero-PC_BBAug23_Soft-toys_with-Apay_Lifestyle_2x._CB597740150_.jpg" alt="New York" class="d-block w-100">
+      </div>
+    </div>
+
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+  
+  <div class="card" style="width:400px">
+    <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+    <div class="card-body">
+      <h4 class="card-title">John Doe</h4>
+      <p class="card-text">Some example text.</p>
+      <a href="#" class="btn btn-primary">See Profile</a>
+    </div>
+  </div>
 </div>
 
 </body>
