WIP amazon footer

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <script src="amazon.js"></script>
 </head>
 <body>
 
@@ -167,7 +168,7 @@
         <span class="carousel-control-next-icon"></span>
       </button>
     </div>
-    <div class="card-lists d-flex lex-wrap justify-content-around w-100">
+    <div class="card-lists d-flex flex-wrap justify-content-around w-100">
       <div class="card-holder d-flex flex-wrap w-25 p-3">
         <h3>Revamp your home in style</h3>
         <div class="card" style="width:50%;">
@@ -267,18 +268,18 @@
       </div>
       
     </div>
-    <div class="card-lists d-flex lex-wrap justify-content-around w-100">
+    <div class="card-lists d-flex flex-wrap justify-content-around w-100">
       <div class="card-holder d-flex flex-wrap w-25 p-3">
         <h3>Starting ₹99 | Amazon Brands & more</h3>
         <div class="card" style="width:50%;">
           <div class="card-body">
-            <a href="" class="text-decoration-none text-dark"><img src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/PB/March/Bikram/QC_186_ALL_Customer_July_2._SY116_CB567469124_.jpg" alt="">Starting ₹299 | Home storage & organization
+            <a href="https://www.amazon.in/b/32702023031?node=32702023031&ld=AZINSOANavDesktop_T3&ref_=nav_cs_sell_T3" class="text-decoration-none text-dark"><img src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/PB/March/Bikram/QC_186_ALL_Customer_July_2._SY116_CB567469124_.jpg" alt="">Starting ₹299 | Home storage & organization
               Starting ₹299 | Home storage & organization</a>
           </div>
         </div>
         <div class="card" style="width:50%;">
           <div class="card-body">
-            <a href="" class="text-decoration-none text-dark"><img src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/PB/March/Bikram/QC_186_ALL_Customer_July_3._SY116_CB567469124_.jpg" alt="">Storage of racks</a>
+            <a href="#" class="text-decoration-none text-dark"><img src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/PB/March/Bikram/QC_186_ALL_Customer_July_3._SY116_CB567469124_.jpg" alt="">Storage of racks</a>
           </div>
         </div>
         <div class="card" style="width:50%;">
@@ -364,9 +365,81 @@
             <a href="" class="text-decoration-none text-dark"><img src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/PB/March/Bikram/QC_186_ALL_Customer_July_1._SY116_CB567470044_.jpg" alt="">Jacket and Dresses</a>
           </div>
         </div>
-      </div>      
+      </div>
+    </div>
+    <div class="container-fluid mx-2" style="border: 1px solid black;">
+      <p class="h5">Up to 60% off | Furniture and sofas sourced from brands owned by Women</p>
+      
+      <div class="scroll-container">
+        <button class="scroll-btn left" onclick="scrollLeftFunc()">&#9664;</button>
+        <ul class="scroll-content">
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/61C6gufR04L._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/81A6bMWEmyL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/917RfvGkyUL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/61naR+uFFCL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/61WwoGVndzL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/81SETQrN0eL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/81SETQrN0eL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/51ksfDGCN5L._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/81oz7UYF9oL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/51CzVU6faIL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/61xEK41tLoL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/61H6UADwF5L._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/71sVFGfqLGL._AC_SY200_.jpg" alt=""></a></li>
+          <li><a href="#"><img src="https://m.media-amazon.com/images/I/81Zb3rnOJEL._AC_SY200_.jpg" alt=""></a></li>
+        </ul>
+        <button class="scroll-btn right" onclick="scrollRight()">&#9654;</button>
+      </div>
+    </div>
+    <div class="container-fluid mx-2 bg-dark text-white" style="border: 1px solid black;">
+      <p class="text-center h5 m-2">Back to top</p>
+    </div>
+    <div class="container-fluid mx-2 m-2 bg-dark text-white" style="border: 1px solid black;">
+      <div class="container footer-container">
+        <div class="d-flex  text-white justify-content-between">  
+          <div class="p-3 ">
+            <ul>
+              let me know
+              <li>Home</li>
+              <li>Home</li>
+              <li>Home</li>
+              <li>Home</li>
+            </ul>
+          </div>
+          <div class="p-3 ">
+            <ul>
+              let me know
+              <li>Home</li>
+              <li>Home</li>
+              <li>Home</li>
+              <li>Home</li>
+            </ul>
+          </div>
+          <div class="p-3 ">
+            <ul>
+              let me know
+              <li>Home</li>
+              <li>Home</li>
+              <li>Home</li>
+              <li>Home</li>
+            </ul>
+          </div>
+          <div class="p-3 ">
+            <ul>
+              let me know
+              <li>Home</li>
+              <li>Home</li>
+              <li>Home</li>
+              <li>Home</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <hr class="border">
+      <div class="container-fluid mx-2 bg-dark text-white" style="border: 1px solid black;">
+        <p class="text-center h5 m-2">Back to top</p>
+      </div>
     </div>
   </div>
-
 </body>
 </html>
